--- a/index.Rmd
+++ b/index.Rmd
@@ -1,30 +1,24 @@
 ---
-title: "Home Page"
+title: "Courses Home Page"
 author: "Caleb Paslay"
 date: "`r Sys.Date()`"
 output: html_document
+theme: journal
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+# [Biology](courses/biology/biology.html)
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+# [Chemistry](courses/chemistry.html)
 
-```{r cars}
-summary(cars)
-```
+# [Earth Science](courses/chemistry.html)
 
-## Including Plots
+# [Botany](courses/chemistry.html)
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
